Update the signature of the `submitStateUpdateTask` across the codebase. (#82942)
This change updates submitStateUpdateTask signature to enforce task implements
ClusterStateTaskListener and remove extra listener argument. This reduces the
number of arguments and simplifies the call sites as all tasks are listeners already.